--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "keywords": [
     "social"
   ],
-  "author": "Amit Mandawaria",
+  "author": "Amit Mandawaria", 
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
@@ -36,6 +36,7 @@
     "multer": "^1.4.3",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.7.0",
+    "nodemon": "^2.0.19",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
