--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
     "del": "^6.0.0",
-    "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
@@ -34,6 +33,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "kue": "^0.11.6",
     "mongoose": "^6.0.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
