--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "author": "Amit Mandawaria",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.30.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
+    "datauri": "^4.1.0",
     "del": "^6.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
